<resources>
    <string name="preferences_account_category_name">Account</string>
    <string name="preferences_account_email_key" translatable="false">api_email</string>
    <string name="preferences_account_password_key" translatable="false">api_password</string>
    <string name="preferences_account_sign_out_key" translatable="false">sign_out</string>
    <string name="preferences_dids_category_name">Phone numbers</string>
    <string name="preferences_dids_did_key" translatable="false">did</string>
    <string name="preferences_dids_active_did_key" translatable="false">active_did</string>
    <string name="preferences_dids_key" translatable="false">dids</string>
    <string name="preferences_dids_error_network">Retrieval failed: network unavailable</string>
    <string name="preferences_dids_error_api_request">Retrieval failed: VoIP.ms unavailable</string>
    <string name="preferences_dids_error_api_parse">Retrieval failed: corrupt response</string>
    <string name="preferences_dids_error_api_error_invalid_credentials">Retrieval failed: invalid credentials</string>
    <string name="preferences_dids_error_api_error">Retrieval failed: API error \'%1$s\'</string>
    <string name="preferences_dids_error_unknown">Retrieval failed: unknown error</string>
    <string name="preferences_dids_fragment_retrieved_dids_key">voipms_dids</string>
    <string name="preferences_dids_stored_locally">Stored locally but not found in VoIP.ms account</string>
    <string name="preferences_dids_fragment_database_dids_key">database_dids</string>
    <string name="preferences_did_did" translatable="false">did</string>
    <string name="preferences_did_show_in_conversations_view_key" translatable="false">preferences_did_%1$s_show_in_conversations_view</string>
    <string name="preferences_did_show_in_conversations_view_title">Show in conversations view</string>
    <string name="preferences_did_retrieve_messages_key" translatable="false">preferences_did_%1$s_retrieve_messages</string>
    <string name="preferences_did_retrieve_messages_title">Retrieve messages</string>
    <string name="preferences_did_show_notifications_key" translatable="false">preferences_did_%1$s_show_notifications</string>
    <string name="preferences_did_show_notifications_title">Show notifications</string>
    <string name="preferences_did_fragment_argument_did">did</string>
    <string name="preferences_sync_category_name">Synchronization</string>
    <string name="preferences_sync_interval_key" translatable="false">sync_interval</string>
    <string name="preferences_sync_interval_title">Synchronization interval</string>
    <string name="preferences_sync_interval_default_value" translatable="false">0</string>
    <string name="preferences_sync_start_date_key" translatable="false">start_date</string>
    <string name="preferences_sync_start_date_title">Synchronization start date</string>
    <string name="preferences_sync_retrieve_only_recent_messages_key" translatable="false">sync_retrieve_only_recent_messages</string>
    <string name="preferences_sync_retrieve_only_recent_messages_title">Retrieve only recent messages</string>
    <string name="preferences_sync_retrieve_only_recent_messages_summary">Retrieve only messages from VoIP.ms dated after the date of the most recent message stored locally</string>
    <string name="preferences_sync_retrieve_only_recent_messages_default_value" translatable="false">false</string>
    <string name="preferences_sync_retrieve_deleted_messages_key" translatable="false">sync_retrieve_deleted_messages</string>
    <string name="preferences_sync_retrieve_deleted_messages_title">Retrieve deleted messages</string>
    <string name="preferences_sync_retrieve_deleted_messages_summary">Retrieve messages from VoIP.ms that were deleted locally</string>
    <string name="preferences_sync_retrieve_deleted_messages_default_value" translatable="false">false</string>
    <string name="preferences_notifications_category_name">Notifications</string>
    <string name="preferences_notifications_enable_key" translatable="false">sms_notification_basic</string>
    <string name="preferences_notifications_enable_title">Notifications</string>
    <string name="preferences_notifications_enable_summary">Show notifications when new messages are received</string>
    <string name="preferences_notifications_enable_default_value" translatable="false">true</string>
    <string name="preferences_notifications_sound_key" translatable="false">sms_notification_ringtone</string>
    <string name="preferences_notifications_sound_title">Sound</string>
    <string name="preferences_notifications_sound_default_value" translatable="false">content://settings/system/notification_sound</string>
    <string name="preferences_notifications_sound_silent">Silent</string>
    <string name="preferences_notifications_sound_unknown">Unknown ringtone</string>
    <string name="preferences_notifications_sound_unknown_perm">Unknown ringtone (external storage permission denied)</string>
    <string name="preferences_notifications_vibrate_key" translatable="false">sms_notification_vibrate</string>
    <string name="preferences_notifications_vibrate_title">Vibrate</string>
    <string name="preferences_notifications_vibrate_default_value" translatable="false">true</string>
    <string name="preferences_appearance_category_name">Appearance</string>
    <string name="preferences_theme_key" translatable="false">theme</string>
    <string name="preferences_theme_title">Theme</string>
    <string name="preferences_theme_default_value" translatable="false">0</string>
    <string name="preferences_message_text_box_maximum_size_key" translatable="false">message_text_box_maximum_size</string>
    <string name="preferences_message_text_box_maximum_size_title">Message text box maximum size</string>
    <string name="preferences_message_text_box_maximum_size_default_value" translatable="false">4</string>
    <string name="preferences_network_category_name">Network</string>
    <string name="preferences_network_connect_timeout_key" translatable="false">connect_timeout</string>
    <string name="preferences_network_connect_timeout_title">Connect timeout</string>
    <string name="preferences_network_connect_timeout_default_value" translatable="false">15</string>
    <string name="preferences_network_read_timeout_key" translatable="false">read_timeout</string>
    <string name="preferences_network_read_timeout_title">Read timeout</string>
    <string name="preferences_network_read_timeout_default_value" translatable="false">15</string>
    <string name="preferences_database_category_name">Database</string>
    <string name="preferences_database_import_key" translatable="false">database_import</string>
    <string name="preferences_database_import_title">Import database</string>
    <string name="preferences_database_import_summary">Import raw SQLite database from a file</string>
    <string name="preferences_database_import_success">Database imported</string>
    <string name="preferences_database_import_fail">Failed to import database: %1$s</string>
    <string name="preferences_database_export_key" translatable="false">database_export</string>
    <string name="preferences_database_export_title">Export database</string>
    <string name="preferences_database_export_summary">Export raw SQLite database to a file</string>
    <string name="preferences_database_export_success">Database exported</string>
    <string name="preferences_database_export_fail">Failed to export database: %1$s</string>
    <string name="preferences_database_clean_up_key" translatable="false">database_clean_up</string>
    <string name="preferences_database_clean_up_title">Clean up database</string>
    <string name="preferences_database_clean_up_summary">Remove outdated information from database</string>
    <string name="preferences_database_clean_up_deleted_messages">Metadata associated with deleted messages</string>
    <string name="preferences_database_clean_up_removed_dids">Messages and metadata associated with removed phone numbers</string>
    <string name="preferences_database_delete_key" translatable="false">database_delete</string>
    <string name="preferences_database_delete_title">Delete database</string>
    <string name="preferences_database_delete_summary">Delete all messages and associated metadata</string>
    <string name="preferences_database_delete_confirm_title">Delete database?</string>
    <string name="preferences_database_delete_confirm_message">This action cannot be undone.</string>
    <string name="preferences_database_fail_create_document">No handler available to select database export location</string>
    <string name="preferences_database_fail_open_document">No handler available to select database import location</string>
    <string name="preferences_about_category_name">About</string>
    <string name="preferences_about_changelog_title">Changelog</string>
    <string name="preferences_about_license_title">License</string>
    <string name="preferences_about_license_summary">Apache License 2.0</string>
    <string name="preferences_about_privacy_title">Privacy</string>
    <string name="preferences_about_third_party_embedded_title">Third-party notices (embedded code)</string>
    <string name="preferences_about_third_party_packages_title">Third-party notices (packages)</string>
    <string name="preferences_markdown_extra">net.kourlas.voipms_sms.MARKDOWN_DOCUMENT_TYPE</string>
    <string name="preferences_perm_denied_external_storage">External storage permission required to access ringtones</string>
    <string name="preferences_setup_completed_for_version_key" translatable="false">setup_completed_for_version</string>
    <string name="preferences_setup_completed_for_version_default_value" translatable="false">0</string>
    <string name="preferences_first_sync_after_sign_in_key" translatable="false">first_sync_after_sign_in</string>
    <string name="preferences_first_run" translatable="false">first_run</string>
    <string name="preferences_encrypted_file_name" translatable="false">%s_encrypted</string>
    <string name="conversation_action_call">Make a call</string>
    <string name="conversation_action_copy">Copy text</string>
    <string name="conversation_action_delete">Delete</string>
    <string name="conversation_action_did">DID: %1$s</string>
    <string name="conversation_action_export">Export</string>
    <string name="conversation_action_info">View details</string>
    <string name="conversation_action_notifications">Notifications</string>
    <string name="conversation_action_bubble">Show as bubble</string>
    <string name="conversation_action_resend">Resend</string>
    <string name="conversation_action_search">Search</string>
    <string name="conversation_action_send">Send</string>
    <string name="conversation_action_share">Share</string>
    <string name="conversation_char_rem">%1$d / %2$d</string>
    <string name="conversations_action_archive">Archive</string>
    <string name="conversations_action_delete">Delete</string>
    <string name="conversations_action_mark_read">Mark read</string>
    <string name="conversations_action_mark_unread">Mark unread</string>
    <string name="conversations_action_unarchive">Unarchive</string>
    <string name="sign_in_name">Sign in to the VoIP.ms API</string>
    <string name="sign_in_email_hint">VoIP.ms account email address</string>
    <string name="sign_in_password_hint">VoIP.ms API password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="skip_button">Skip</string>
    <string name="github_url" translatable="false">https://github.com/michaelkourlas/voipms-sms-client</string>
    <string name="app_name">VoIP.ms SMS</string>
    <string name="copyright">Copyright © 2015–2023 Michael Kourlas</string>
    <string name="version">Version 0.6.25</string>
</resources>