<?xml version="1.0" encoding="utf-8"?><!--
  ~ VoIP.ms SMS
  ~ Copyright (C) 2018 Michael Kourlas
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <net.kourlas.voipms_sms.preferences.controls.DatabaseImportPreference
        android:icon="@android:color/transparent"
        android:summary="@string/preferences_database_import_summary"
        android:title="@string/preferences_database_import_title" />
    <net.kourlas.voipms_sms.preferences.controls.DatabaseExportPreference
        android:icon="@android:color/transparent"
        android:summary="@string/preferences_database_export_summary"
        android:title="@string/preferences_database_export_title" />
    <net.kourlas.voipms_sms.preferences.controls.DatabaseCleanUpPreference
        android:icon="@android:color/transparent"
        android:summary="@string/preferences_database_clean_up_summary"
        android:title="@string/preferences_database_clean_up_title" />
    <net.kourlas.voipms_sms.preferences.controls.DatabaseDeletePreference
        android:icon="@android:color/transparent"
        android:summary="@string/preferences_database_delete_summary"
        android:title="@string/preferences_database_delete_title" />
</android.support.v7.preference.PreferenceScreen>