<?xml version="1.0" encoding="utf-8"?><!--
  ~ VoIP.ms SMS
  ~ Copyright (C) 2015-2016 Michael Kourlas
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/resend_button"
        android:icon="@drawable/ic_send_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversation_action_resend"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/copy_button"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversation_action_copy"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/share_button"
        android:icon="@drawable/ic_share_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversation_action_share"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/delete_button"
        android:icon="@drawable/ic_delete_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversation_action_delete"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/info_button"
        android:icon="@drawable/ic_info_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversation_action_info"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
</menu>