<?xml version="1.0" encoding="utf-8"?><!--
  ~ VoIP.ms SMS
  ~ Copyright (C) 2015-2017 Michael Kourlas
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/archive_button"
        android:icon="@drawable/ic_archive_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversations_action_archive"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/unarchive_button"
        android:icon="@drawable/ic_unarchive_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversations_action_unarchive"
        android:visible="false"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/mark_read_button"
        android:icon="@drawable/ic_drafts_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversations_action_mark_read"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/mark_unread_button"
        android:icon="@drawable/ic_markunread_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversations_action_mark_unread"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item
        android:id="@+id/delete_button"
        android:icon="@drawable/ic_delete_white_24dp"
        android:showAsAction="always"
        android:title="@string/conversations_action_delete"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
</menu>